Resolves: tdf#97465 like scroll ignore wheel for sc input handler inputchanged

Change-Id: Ide7fe1388ffe6f85a1f459037316d03193470d8a