sc/source/ui/app/inputwin.cxx
@@ -1526,6 +1526,10 @@ void ScTextWnd::Command( const CommandEvent& rCEvt )
         {
             //don't call InputChanged for CommandEventId::Wheel
         }
+        else if ( nCommand == CommandEventId::Swipe )
+        {
+            //don't call InputChanged for CommandEventId::Swipe
+        }
         else
             SC_MOD()->InputChanged( pEditView );
     }
